Camlp5 Version 6.11:
--------------------

* [22 Jul 13] Updated for ocaml version 4.01.0
* [02 Jul 13] Added 'MLast.loc_of_with_constr'.
* [02 Jul 13] Fixed bug toplevel with revised syntax; "= 'a" was missing
  in output in that example:
    # module type A = sig module type S = 'a; end;
    module type A = sig module type S; end
* [02 Jul 13] Now accept lowercase ident for module types, like ocaml does.
  Accepted also in revised syntax.

Camlp5 Version 6.10:
--------------------

* [19 Jun 13] Updated for ocaml version 4.01.0
* [14 Jun 13] (experimental) Now, in revised syntax, a "." followed by
  a newline is interpreted as a ";", allowing to end phrases with ".".
  Drawback: will syntax error when writing a record/module access in two
  lines ending the first one with "." like:
     foo.
     bar

Camlp5 Version 6.09:
--------------------

* [22 Apr 13] Accept now "match with | | ... end" in revised syntax, with
  a required "|" in the first case, as alternative syntax for match.
* [19 Apr 13] Added function 'Pcaml.value greek_ascii_equiv' giving
  an ascii equivalent to a greek (utf8) letter representing a type
  parameter. E.g. 'a' for 'α', 'b' for 'β', and so on.
* [19 Mar 13] Fixed bug no locations built in some cases of constructors.
* [15 Mar 13] Updated for ocaml version 4.00.2.
* [13 Mar 13] Fixed bug: in toplevel, the highlighting of errors did not
  work.
* [13 Mar 13] Added option '-dquot' to specify the default quotation name.
  and the ability to use "#option" directive with two parameters. Therefore,
  we can use either (e.g.):
      -dquot "expr"
  in the command line of camlp5 or
      #option "-dquot" "expr"
  inside a file.

Camlp5 Version 6.08:
--------------------

* [06 Mar 13] Now 'make' displays a message how to compile, instead
  of doing 'make out'. Old behaviour of 'make' must be now 'make out'.
* [28 Feb 13] Now accept identifiers starting with a greek letter as
  variable names.