@@ -5,7 +5,7 @@ OVERVIEW
   It is compatible with all versions of ocaml from 1.07 to 4.01.0 and
   jocaml 3.12.0 to 3.12.1.
 
-  This Camlp5 version is 6.11.
+  This Camlp5 version is 6.12-exp.
 
   Camlp5 must be compiled either in "transitional mode" or in "strict mode".
   See the file MODE for information.
