@@ -1,5 +1,5 @@
 (* camlp5r *)
-(* $Id: pcaml.ml,v 6.45 2013/08/15 22:08:21 deraugla Exp $ *)
+(* $Id: pcaml.ml,v 6.46 2013/08/15 22:48:47 deraugla Exp $ *)
 (* Copyright (c) INRIA 2007-2012 *)
 
 #load "pa_macro.cmo";
@@ -7,7 +7,7 @@
 
 open Printf;
 
-value version = "6.11";
+value version = "6.12-exp";
 value syntax_name = ref "";
 
 value gram =
